--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@primevue/themes": "^4.2.5",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "primevue": "^4.2.5",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
