--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
   ],
   "compilerOptions": {
     "target": "es2016",
-    "lib": ["es2017"]
+    "lib": ["es2017"],
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   }
 }
