--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sigma-sigma-boy ",
-  "version": "0.0.0",
+  "name": "sigma-sigma-boy",
+  "version": "0.0.1d",
   "private": true,
   "type": "module",
   "scripts": {
@@ -25,6 +25,7 @@
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/compiler-sfc": "^3.5.13",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.7.0",
