--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.5",
+    "@supabase/supabase-js": "^2.48.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "primevue": "^4.2.5",
