--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@number-flow/vue": "^0.4.3",
     "@primevue/themes": "^4.2.5",
     "@supabase/supabase-js": "^2.48.1",
     "date-fns": "^4.1.0",
